--- a/romantolong.3
+++ b/romantolong.3
@@ -1,7 +1,7 @@
 .\"
 .\" romantolong.3
 .\"
-.\" Copyright 2017 Ammon Smith
+.\" Copyright 2017 Emmie Maeda
 .\"
 .\" Permission is hereby granted, free of charge, to any person obtaining a copy
 .\" of this software and associated documentation files (the "Software"), to
@@ -21,7 +21,7 @@
 .\" OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 .\" SOFTWARE.
 .\"
-.TH ROMANTOLONG 3 2017-01-16 "Ammon Smith" "libroman"
+.TH ROMANTOLONG 3 2017-01-16 "Emmie Maeda" "libroman"
 .SH NAME
 romantolong, longtoroman - convert roman numerals
 .SH SYNPOSIS
@@ -63,6 +63,6 @@ If \fBlongtoroman\fP() ever returns a value that \fBromantolong\fP() cannot unde
 .SH SEE ALSO
 \fBstrtol\fP(3), \fBisspace\fP(3)
 .SH AUTHOR
-Ammon Smith (ammon.i.smith\fR@\fPgmail.com)
+Emmie Maeda (emmie.maeda\fR@\fPgmail.com)
 .P
 \fIhttps://gitlab.com/emmiegit/libroman\fP
